JEDIT 3.2 VERSION HISTORY

* Version 3.2pre4

+ New Features

- Occam syntax highlighting (Richard Beton)
- The icons in the file system browser can be toggled on and off

+ Enhancements

- You can now choose if you want to download plugin source, or only binaries

* Version 3.2pre3

+ New Features

- 'Include Guard' macro (John Gellene)
- Positional parameters in abbrevs: if you enter something like, for
  example, F#j#array.length# in Java mode where 'F' is defined to
  expand to 'for(int $1 = 0; $1 < $2; $1++)\n{\n\t\|\n}', the following
  will be inserted in the buffer, with the caret positioned between the
  two curly braces:

  for(int j = 0; j < array.length; j++)
  {

  }

+ Enhancements

- Improved progress bar window in plugin manager
- Specifying a repeat count greater than 20 displays a confirmation
  dialog box
- C+ENTER displays a prompt now
- On MacOS X, jEdit's menus are now placed into the system menu bar,
  not in a fake 'menu bar' inside views
- Status bar has a new look
- jEdit no longer uses hard-coded fonts for the buffer switcher, search
  bar and status bar
- -nosplash command line switch removed, splash screen can now be
  enabled and disabled in the Utilities->Global Options dialog box
- Expanding a fold will now attempt to scroll the text area in order to
  make the fold visible, if possible
- The current buffer's edit mode is now shown in the status bar
- Java mode has a new set of default abbrevs

+ Neutral

- User's guide has been moved into the jedit.jar JAR file

+ Bug Fixes

- plugins.dtd was missing from jedit.jar, thus the new plugin manager
  didn't work
- FileVFS._rename() didn't work if the destination file already exists
  on Windows. This caused problems when saving files, for example,
  because #<filename>#save# would never be renamed to <filename>
- Fixed several bugs in the 'scroll to caret' code
- Keyboard shortcuts might work in Java 1.4 now
- The recent file list was being reversed each time jEdit was run!!!